src/styles/profile.css
.page {
    height: 100vh;
}

.container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 80%;

    animation: fadeInFromLeft ease-in 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.introduction {
    /* align-self: auto; */
    display: flex;
    flex-direction: column;
    align-content: center;
    flex-basis: 30em;
    margin-inline: 2em;
}

.introduction p:nth-child(1) {
    font-size: 1.25em;
    font-weight: 400;
    text-transform: uppercase;
    text-align: left;

    color: #9CA3AF;

    display: inline;
    margin: 0;
}

.introduction p:nth-child(2) {
    font-size: 1.75em;
    font-weight: 600;
    text-align: left;

    margin: 0;
}

.introduction p:nth-child(3) {
    margin-top: 1em;
    margin-bottom: 0;
    font-size: 1em;
    line-height: 1.5em;

    color: #9CA3AF;
}

.links {
    margin-top: 1em;
}

.links a {
    display: inline-block;
    background-color: var(--white);

    /* border-radius: 0.25em; */
    border: 1px solid var(--white);

    text-align: center;
    text-transform: uppercase;

    margin-top: 1em;
    padding-inline: 2em;
    padding-top: 0.55em;
    padding-bottom: 0.55em;

    -webkit-transition: background-color .3s ease-in;
    -ms-transition: background-color .3s ease-in;
    transition: all .3s ease-in;
}

.links a.primary {
    background-color: var(--color1);
    color: white;
    /* box-shadow: 3px 3px rgb(103, 174, 255); */
}

.socials {
    display: inherit;
    justify-content: flex-end;
}

.socials div:not(:last-child) {
    padding-inline-end: 0.5em;
}
.socials a {
    width: fit-content;
    height: fit-content;
}
.socials a:hover {
    opacity: 50%;
}

.socials a img {
    width: 1.75em;
    height: auto;
}   

.links a:hover:not(.highlight) {
    /* background-color: var(--black); */
    -webkit-transition: background-color .3s ease-in;
    -ms-transition: background-color .3s ease-in;
    transition: all .3s ease-in;
    border: 1px solid var(--black);
    /* color: var(--white); */
}

/* @keyframes fadeInFromLeft {
    0% {
        transform: translateX(-20px);
        opacity: 0;
    }

    100% {
        transform: translateX(0);
        opacity: 1;
    }
} */

.picture-container>img {
    width: 25vw;
    height: auto;
    /* border-radius: 50%; */
}

@media only screen and (max-width: 768px) {
    .container {
        flex-direction: column;
        justify-content: flex-start;
        margin: 0;
    }

    .introduction {
        order: 2;
        align-items: center;
        margin-top: 0.5em;
        margin-inline: 0;
    }

    .introduction > p:nth-child(1) {
        font-size: 1.25em;
        text-align: center;
    }

    .introduction > p:nth-child(2) {
        font-size: 1.8em;
        text-align: center;
        margin: 1vh 0;
    }

    .introduction > p:nth-child(3) {
        font-size: 1em;
        text-align: center;
    }

    .picture-container {
        order: 1;
    }

    .links > a {
        display: block;
        width: 40vw;
    }

    .links > a:last-child {
        margin-bottom: 1.5em;
    }

    .picture-container img {
        width: 12em;
    }
}

